--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -61,6 +61,7 @@
           {% for p in sorted_pages %}
             {% if p.nav and p.autogen == null %}
               {% if p.dropdown %}
+  {% comment %}
                 {% assign has_active_child = false %}
                 {% for child in p.children %}
                   {% if page.title == child.title %}
@@ -82,18 +83,19 @@
                       <span class="sr-only">(current)</span>
                     {% endif %}
                   </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    {% for child in p.children %}
-                      {% if child.title == 'divider' %}
-                        <div class="dropdown-divider"></div>
-                      {% else %}
-                        <a class="dropdown-item {% if page.title == child.title %}active{% endif %}" href="{{ child.permalink | relative_url }}">
-                          {{- child.title -}}
-                        </a>
+                  {<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">}
+                   {% for child in p.children %}
+                    {% if child.title == 'divider' %}
+                     {<div class="dropdown-divider"></div>}
+                     {% else %}
+                      <a class="dropdown-item {% if page.title == child.title %}active{% endif %}" href="{{ child.permalink | relative_url }}">
+                       #   {{- child.title -}}
+                       # </a>
                       {% endif %}
                     {% endfor %}
                   </div>
                 </li>
+{% endcomment %}
               {% else %}
                 {% assign parent_link = p.permalink | remove: 'index.html' %}
                 <li class="nav-item {% if page.url contains parent_link %}active{% endif %}">
@@ -139,3 +141,4 @@
     </progress>
   {% endif %}
 </header>
+
